--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -2,15 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?selectableItemBackground">
+    android:layout_margin="5dp"
+    app:cardUseCompatPadding="true"
+    app:cardBackgroundColor="@color/theme_primary"
+    android:elevation="@dimen/cardview_default_elevation"
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#2f2f2f"
+        android:background="@color/theme_primary"
         android:orientation="vertical">
 
         <!--suppress AndroidLintContentDescription -->
@@ -25,7 +26,7 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="#fff" />
+            android:textColor="@color/text_primary" />
 
         <TextView
             android:id="@+id/article_subtitle"
@@ -37,7 +38,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="@color/ltgray" />
+            android:textColor="@color/text_secondary" />
 
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
