--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -17,9 +17,10 @@
 
 <resources>
     <color name="photo_placeholder">#ccc</color>
+    <color name="theme_primary">#1E1E1E</color>
+    <color name="theme_primary_dark">#121212</color>
+    <color name="theme_accent">#E040FB</color>
+    <color name="text_secondary">#ffe0e0e0</color>
+    <color name="text_primary">#FFFFFF</color>
 
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
 </resources>
